===========================
- Console output shows the number of devices in the lan

devicesinlan 0.6.0 20150819
===========================
- Added ping search support
- Made my own arp-scanner
- Added ieee-oui.txt database with get-oui from arp-scan

devicesinlan 0.7.0 20160717
===========================
- Added UI.
- First Windows verion

devicesinlan 0.8.0 20170118
===========================
- Added more device types
- Works -a, -r, -l again
- Improved apps dependencies

devicesinlan 0.9.0 20170205
===========================
- Pretty list in console
- Device type added to lists

devicesinlan 0.10.0 20170206
============================
- Replaced Color class by colorama package
- There is Color in Windows console reports

devicesinlan 0.11.0 20170207
============================
- Replaced Thread with PoolThreadExecutor
- Added setting to set concurrence
- Improved console reports

devicesinlan 1.0.0 20170208
===========================
- Project man page created
- Save/load xml lists
- Check for updates
- Gets installation statistcs

devicesinlan 1.0.1 20170209
===========================
- Improved statistics system
- Fix little bugs

devicesinlan 1.0.2 20170222
===========================
- Added logging system
- Statistics work now in console mode
- Add a Device can input the type now
- Add to console mode --load --save --reset

devicesinlan 1.1.0 20170226
===========================
- Logging is deactivated by default
- Statistics system now sends platform

devicesinlan 1.2.0 20171228
===========================
- Now, You don't need to be superuser to run DevicesInLan
- Improved documentation and spanish translation
- Netifaces removed
- Removed buggy shortcut
- Added faster socket to check arp
- Changed distribution system from innoreader to setup

devicesinlan 1.3.0 XXXXXXXX
===========================
- Solved translation path bug in linux
- Current device is showed in blue
- Now there is an executable for console and other for ui