@@ -95,3 +95,5 @@ devicesinlan 1.3.0 XXXXXXXX
 - Solved translation path bug in linux
 - Current device is showed in blue
 - Now there is an executable for console and other for ui
+- Created documentation for both executables
+- Removed man2html dependency
